Fix double arrows appearing on modals on mobile

--- a/src/styles/itemModal.scss
+++ b/src/styles/itemModal.scss
@@ -20,7 +20,7 @@ $mobilewidth: 710px;
   @media (max-width: $mobilewidth) {
     &-prev, &-next {width: 40px; height: 100px; line-height: 100px; margin-top: -50px;
       font-size: 2.5rem; text-align: center; opacity: 1;
-      .material-icons {display: none;}
+      svg {display: none;}
       &:before {content: ""; width: 0; height: 0; border: transparent 20px solid; position: absolute;
         top: 0; bottom: 0; margin: auto;
       }
